# gl-objects-rs

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
examples/: glfw.rs  sdl2.rs
resources/: rectangle.shader  rectangle1.shader  rectangle2.shader  shader_with_matrix.shader  text_shader.shader
src/: lib.rs  main.rs  object.rs  shaders.rs  window.rs
src/backend/: glium_glfw.rs  glium_sdl2.rs  mod.rs
src/imgui_ctx/: mod.rs
src/primitives/: rectangle.rs  text.rs  triangle.rs
