[package]
edition = "2021"
name = "gl-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx-maths = "0.2.8"
glfw = "0.45.0"
glfw-sys = "4.0.0"
glow = "0.11.2"
imgui = "0.8.2"
imgui-opengl-renderer = "0.11.1"
sdl2 = "0.35.2"
sdl2-sys = "0.35.2"

[features]
default = []
image = ["sdl2-sys/image"]
mixer = ["sdl2-sys/mixer"]

sdl2 = []

ttf = ["sdl2-sys/ttf"]
# Use hidapi support in SDL. Only 2.0.12 and after
bundled = ["sdl2-sys/bundled"]
static-link = ["sdl2-sys/static-link"]
use-bindgen = ["sdl2-sys/use-bindgen"]
use-pkgconfig = ["sdl2-sys/use-pkgconfig"]
use-vcpkg = ["sdl2-sys/use-vcpkg"]
use_mac_framework = ["sdl2-sys/use_mac_framework"]
wayland = ["glfw-sys/wayland"]
