[package]
description = "A gl_object libray for quick use."
documentation = "https://github.com/aniketbiprojit/gl-objects-rs"
homepage = "https://github.com/aniketbiprojit/gl-objects-rs"
repository = "https://github.com/aniketbiprojit/gl-objects-rs"

license-file = "LICENSE"

edition = "2021"
name = "gl_object"
version = "0.0.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx-maths = "0.2.8"
glfw = "0.45.0"
glfw-sys = "4.0.0"
glium = "0.32.1"
glow = "0.11.2"
imgui = "0.8.2"
imgui-opengl-renderer = "0.11.1"
rusttype = {version = "0.9.2", features = ["gpu_cache"]}
sdl2 = "0.35.2"
sdl2-sys = "0.35.2"
takeable-option = "0.5.0"

[lib]
name = "gl_object"
path = "src/lib.rs"

[[bin]]
name = "gl_object_bin"
path = "src/main.rs"

exclude = [
  "examples",
  "resources",
]

[features]
default = []
image = ["sdl2-sys/image"]
mixer = ["sdl2-sys/mixer"]
sdl2 = []
ttf = ["sdl2-sys/ttf"]
# Use hidapi support in SDL. Only 2.0.12 and after
bundled = ["sdl2-sys/bundled"]
static-link = ["sdl2-sys/static-link"]
use-bindgen = ["sdl2-sys/use-bindgen"]
use-pkgconfig = ["sdl2-sys/use-pkgconfig"]
use-vcpkg = ["sdl2-sys/use-vcpkg"]
use_mac_framework = ["sdl2-sys/use_mac_framework"]
wayland = ["glfw-sys/wayland"]
